--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^6.0.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-scrollable-feed": "^1.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
